--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,8 +5,9 @@ on:
 jobs:
   create-branch:
     runs-on: ubuntu-latest
-    uses: peterjgrainger/action-create-branch@v2.0.1
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    with:
-      branch: "${{ github.event.issue.title }}"
+    -name:
+      uses: peterjgrainger/action-create-branch@v2.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        branch: "${{ github.event.issue.title }}"
