--- a/.github/workflows/create-branch.yml
+++ b/.github/workflows/create-branch.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Create Branch
         uses: peterjgrainger/action-create-branch@v2.2.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN}}
         with:
           branch: 'release-notes'
           sha: '${{ github.event.pull_request.head.sha }}'
