--- a/.github/workflows/create-branch.yml
+++ b/.github/workflows/create-branch.yml
@@ -3,7 +3,9 @@
 name: Create Branch From Issue
 
 # Controls when the workflow will run
-on: [issues]
+on: 
+  issues:
+    - opened
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
