--- a/.github/workflows/create-branch.yml
+++ b/.github/workflows/create-branch.yml
@@ -22,11 +22,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN}}
         with:
-          branch: 'release-notes'
+          branch: '${{ github.event.issue.title }}'
           sha: '${{ github.event.pull_request.head.sha }}'
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+        run: echo "Branch created"
+
